--- a/fixes/index.html
+++ b/fixes/index.html
@@ -99,47 +99,39 @@ title: Math, Sonification, Plots
             background-color: #4CAF50; /* Green background */
             color: white; /* White text */
             // color: #FFFFFF;
-            text-align: left;
+            // text-align: left;
             font-size: 18px;
             font-weight: bold;
             padding: 0px 5px;
             margin-right:16px;
-            // background: transparent;
-            box-sizing: border-box;
-            // width: 74px;
-            width: 74;
-            height: 74px;
 
-            // transition: 100ms all ease;
-            cursor: pointer;
-
-            border-color: transparent transparent transparent #202020;
-            border-style: solid;
-            border-width: 37px 0px 37px 60px;
+            width: 0;
+            height: 0;
+            border-top: 32px solid transparent;
+            border-left: 48px solid #000;
+            border-bottom: 32px solid transparent;
         }
 
         .pause {
             background-color: #4CAF50; /* Green background */
             color: white; /* White text */
             // color: #FFFFFF;
-            text-align: left;
+            // text-align: left;
             font-size: 18px;
             font-weight: bold;
             padding: 0px 5px;
             margin-right:16px;
-            // background: transparent;
-            box-sizing: border-box;
-            // width: 74px;
-            width: 74;
-            height: 74px;
 
-            // transition: 100ms all ease;
-            cursor: pointer;
-            
-            border-color: #202020;
-            border-style: double;
-            border-width: 0px 0px 0px 60px;
+            width: 16px;
+            height: 64px;
+            border-right: 16px solid #000;
+            border-left: 16px solid #000;
         }
+
+
+
+
+        
 
         .vol {
             width: 0;
@@ -149,9 +141,9 @@ title: Math, Sonification, Plots
             font-weight: bold;
             // padding: 0px 5px;
             margin-right: 8px;
-            border-top: 25px solid transparent;
-            border-right: 50px solid #000;
-            border-bottom: 25px solid transparent;
+            border-top: 24px solid transparent;
+            border-right: 36px solid #000;
+            border-bottom: 24px solid transparent;
         }
 
         .ume {
@@ -160,9 +152,9 @@ title: Math, Sonification, Plots
             // text-align: left;
             font-size: 18px;
             font-weight: bold;
-            border-top: 25px solid transparent;
-            border-left: 50px solid #000;
-            border-bottom: 25px solid transparent;
+            border-top: 24px solid transparent;
+            border-left: 36px solid #000;
+            border-bottom: 24px solid transparent;
         }
         </style>
 </head>
@@ -253,6 +245,6 @@ title: Math, Sonification, Plots
                 }
         </script>
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
-        <button class="play" onclick="play(this)"></button>
+        <button class="play" onclick="play(this)">SONIFICATION</button>
         <button class="vol" onclick="vol_dec()">-</button>
         <button class="ume" onclick="vol_inc()">+ VOL</button>
