--- a/fixes/index.html
+++ b/fixes/index.html
@@ -99,7 +99,7 @@ title: Math, Sonification, Plots
             background-color: #4CAF50; /* Green background */
             color: white; /* White text */
             // color: #FFFFFF;
-            text-align: left;
+            text-align: right;
             font-size: 18px;
             font-weight: bold;
             padding: 0px 5px;
@@ -116,7 +116,7 @@ title: Math, Sonification, Plots
             background-color: #4CAF50; /* Green background */
             color: white; /* White text */
             // color: #FFFFFF;
-            text-align: left;
+            text-align: right;
             font-size: 18px;
             font-weight: bold;
             padding: 0px 5px;
