--- a/fixes/index.html
+++ b/fixes/index.html
@@ -245,6 +245,6 @@ title: Math, Sonification, Plots
                 }
         </script>
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
-        <button class="play" onclick="play(this)">SONIFICATION</button>
+        <button class="play" onclick="play(this)"></button>
         <button class="vol" onclick="vol_dec()">-</button>
         <button class="ume" onclick="vol_inc()">+ VOL</button>
