--- a/fixes/index.html
+++ b/fixes/index.html
@@ -99,39 +99,47 @@ title: Math, Sonification, Plots
             background-color: #4CAF50; /* Green background */
             color: white; /* White text */
             // color: #FFFFFF;
-            text-align: right;
+            text-align: left;
             font-size: 18px;
             font-weight: bold;
             padding: 0px 5px;
             margin-right:16px;
+            // background: transparent;
+            box-sizing: border-box;
+            // width: 74px;
+            width: 74;
+            height: 74px;
 
-            width: 60;
-            height: 0;
-            border-top: 32px solid transparent;
-            border-left: 48px solid #000;
-            border-bottom: 32px solid transparent;
+            // transition: 100ms all ease;
+            cursor: pointer;
+
+            border-color: transparent transparent transparent #202020;
+            border-style: solid;
+            border-width: 37px 0px 37px 60px;
         }
 
         .pause {
             background-color: #4CAF50; /* Green background */
             color: white; /* White text */
             // color: #FFFFFF;
-            text-align: right;
+            text-align: left;
             font-size: 18px;
             font-weight: bold;
             padding: 0px 5px;
             margin-right:16px;
+            // background: transparent;
+            box-sizing: border-box;
+            // width: 74px;
+            width: 74;
+            height: 74px;
 
-            width: 60;
-            height: 64px;
-            border-right: 16px solid #000;
-            border-left: 16px solid #000;
+            // transition: 100ms all ease;
+            cursor: pointer;
+            
+            border-color: #202020;
+            border-style: double;
+            border-width: 0px 0px 0px 60px;
         }
-
-
-
-
-        
 
         .vol {
             width: 0;
@@ -245,6 +253,6 @@ title: Math, Sonification, Plots
                 }
         </script>
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
-        <button class="play" onclick="play(this)"></button>
+        <button class="play" onclick="play(this)">SONIFICATION</button>
         <button class="vol" onclick="vol_dec()">-</button>
         <button class="ume" onclick="vol_inc()">+ VOL</button>
