--- a/fixes/index.html
+++ b/fixes/index.html
@@ -108,7 +108,7 @@ title: Math, Sonification, Plots
             box-sizing: border-box;
             // width: 74px;
             width: 74;
-            height: 74;
+            height: 74px;
 
             // transition: 100ms all ease;
             cursor: pointer;
@@ -131,7 +131,7 @@ title: Math, Sonification, Plots
             box-sizing: border-box;
             // width: 74px;
             width: 74;
-            height: 74;
+            height: 78px;
 
             // transition: 100ms all ease;
             cursor: pointer;
