--- a/fixes/index.html
+++ b/fixes/index.html
@@ -257,4 +257,4 @@ title: Math, Sonification, Plots
         <button class="play" onclick="play(this)">SONIFICATION</button>
         <br>
         <button class="vol" onclick="vol_dec()">-</button>
-        <button class="ume" onclick="vol_inc()">+ VOL</button>
+        <button class="ume" onclick="vol_inc()">+ VOLUME</button>
