--- a/fixes/index.html
+++ b/fixes/index.html
@@ -40,8 +40,10 @@ title: Math, Sonification, Plots
         }
 
         #myContainer {
-                width: 100%;
-                height: 100%;
+                // width: 100%;
+                // height: 100%;
+                width: 800px;
+                height: 600px;
                 position: relative;
                 // background: url('https://rbobkoskie3.github.io/images/ST_Circle.png');
                 background-color: blue;
@@ -148,18 +150,18 @@ title: Math, Sonification, Plots
     <div><p>Click on Image to Toggle Between High Contrast <> Standard Contrast Settings for Image.</div></p>
 
     <div id="myContainer">
-        <img class="center fit" src="https://rbobkoskie3.github.io/images/ST_Circle.png"
+        <img class="center fit" src="https://rbobkoskie3.github.io/images/ST_Neg_Line.png"
              title="Click on Image to Toggle Between High Contrast <> Standard Contrast" id="img_1" onclick = "change();"/>
         <script>
                 function change() {
-                        var img1 = "https://rbobkoskie3.github.io/images/ST_Circle.png",
-                            img2 = "https://rbobkoskie3.github.io/images/HC_Circle.png";
+                        var img1 = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png",
+                            img2 = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
                         var imgElement = document.getElementById('img_1');
                         imgElement.src = (imgElement.src === img1)? img2 : img1;
                 }
         </script>
 
-        <audio id="audio" src="https://rbobkoskie3.github.io/sounds/circle.mp4" ></audio>
+        <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_neg.mp4"></audio>
         <div id ="myAnimation"></div>
         </div>
         <script>
