--- a/fixes/index.html
+++ b/fixes/index.html
@@ -41,9 +41,9 @@ title: Math, Sonification, Plots
 
         #myContainer {
                 width: 100%;
-                height: 100%;
+                // height: 100%;
                 // width: 800px;
-                // height: 600px;
+                height: 600px;
                 position: relative;
                 // background: url('https://rbobkoskie3.github.io/images/ST_Circle.png');
                 background-color: blue;
