--- a/fixes/index.html
+++ b/fixes/index.html
@@ -41,9 +41,9 @@ title: Math, Sonification, Plots
 
         #myContainer {
                 width: 100%;
-                // height: 100%;
+                height: 100%;
                 // width: 800px;
-                height: 600px;
+                // height: 600px;
                 position: relative;
                 // background: url('https://rbobkoskie3.github.io/images/ST_Circle.png');
                 background-color: blue;
@@ -151,7 +151,7 @@ title: Math, Sonification, Plots
     <div><p>Click on Image to Toggle Between High Contrast <> Standard Contrast Settings for Image.</div></p>
 
     <div id="myContainer" class="center fit">
-        <img d="myContainer" class="center fit" src="https://rbobkoskie3.github.io/images/ST_Neg_Line.png"
+        <img id="myContainer" class="center fit" src="https://rbobkoskie3.github.io/images/ST_Neg_Line.png"
              title="Click on Image to Toggle Between High Contrast <> Standard Contrast" id="img_1" onclick = "change();"/>
         <script>
                 function change() {
