--- a/fixes/index.html
+++ b/fixes/index.html
@@ -151,7 +151,7 @@ title: Math, Sonification, Plots
     <div><p>Click on Image to Toggle Between High Contrast <> Standard Contrast Settings for Image.</div></p>
 
     <div id="myContainer" class="center fit">
-        <img id="myContainer" class="center fit" src="https://rbobkoskie3.github.io/images/ST_Neg_Line.png"
+        <img class="center fit" src="https://rbobkoskie3.github.io/images/ST_Neg_Line.png"
              title="Click on Image to Toggle Between High Contrast <> Standard Contrast" id="img_1" onclick = "change();"/>
         <script>
                 function change() {
