--- a/fixes/index.html
+++ b/fixes/index.html
@@ -145,11 +145,11 @@ title: Math, Sonification, Plots
             border-bottom: 24px solid transparent;
         }
         /*
-        /* *********************************
-         * Set up the keyframes to actually describe the begining and end states of 
-         * the animation.  The browser will interpolate all the frames between these 
-         * points.  Again, remember your vendor-specific prefixes for now!
-         */
+        // *********************************
+        // Set up the keyframes to actually describe the begining and end states of 
+        // the animation.  The browser will interpolate all the frames between these 
+        // points.  Again, remember your vendor-specific prefixes for now!
+
         @-webkit-keyframes myOrbit {
             from { -webkit-transform: rotate(0deg) translateX(150px) rotate(0deg); }
             to   { -webkit-transform: rotate(360deg) translateX(150px) rotate(-360deg); }
