--- a/fixes/index.html
+++ b/fixes/index.html
@@ -217,7 +217,7 @@ title: Math, Sonification, Plots
         </script>
 
         <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_neg.mp4"></audio>
-        <div id ="myAnimation"></div>
+        <div id ="tracePlot"></div>
         </div>
         <script>
                 var audio = document.getElementById("audio");
