--- a/fixes/index.html
+++ b/fixes/index.html
@@ -90,17 +90,17 @@ title: Math, Sonification, Plots
                 animation-name: example;
                 animation-duration: 5s;
                 animation-iteration-count: 1;
-                animation-direction: reverse;
+                animation-direction: normal;
         }
         /* Safari 4.0 - 8.0 */
         @-webkit-keyframes example {
             0%   {left:0px; top:0px;}
-            100% {left:200px; top:200px;}
+            100% {left:600px; top:600px;}
         }
         /* Standard syntax */
         @keyframes example {
             0%   {left:0px; top:0px;}
-            100% {left:200px; top:200px;}
+            100% {left:600px; top:600px;}
         }
 
         .play {
