--- a/fixes/index.html
+++ b/fixes/index.html
@@ -217,8 +217,8 @@ title: Math, Sonification, Plots
         </script>
 
         <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_neg.mp4"></audio>
-        <div id ="tracePlot"></div>
         </div>
+
         <script>
                 var audio = document.getElementById("audio");
                 audio.volume = 0.4;
@@ -233,8 +233,9 @@ title: Math, Sonification, Plots
                 }
 
                 function play(button) {
-                        var elem = document.getElementById("myAnimation");   
-                        var pos = 0;
+                        <div id ="tracePlot"></div>
+                        // var elem = document.getElementById("myAnimation");   
+                        var pos = -100;
                         var id = setInterval(frame, 10);
                         // var id = setTimeout(frame, 1000);
                         // var audio = document.getElementById("audio");
