--- a/fixes/index.html
+++ b/fixes/index.html
@@ -217,6 +217,7 @@ title: Math, Sonification, Plots
         </script>
 
         <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_neg.mp4"></audio>
+        <div class="tracePlot"></div>
         </div>
 
         <script>
@@ -287,7 +288,6 @@ title: Math, Sonification, Plots
                 }
         </script>
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
-        <div class="tracePlot myContainer"></div>
         <button class="play" onclick="play(this)">SONIFICATION</button>
         <br>
         <button class="vol" onclick="vol_dec()">-</button>
