--- a/fixes/index.html
+++ b/fixes/index.html
@@ -86,7 +86,7 @@ title: Math, Sonification, Plots
                 -webkit-animation-name: example;        /* Safari 4.0 - 8.0 */
                 -webkit-animation-duration: 5s;         /* Safari 4.0 - 8.0 */
                 -webkit-animation-iteration-count: 1;   /* Safari 4.0 - 8.0 */
-                -webkit-animation-direction: reverse;   /* Safari 4.0 - 8.0 */
+                -webkit-animation-direction: normal;   /* Safari 4.0 - 8.0 */
                 animation-name: example;
                 animation-duration: 5s;
                 animation-iteration-count: 1;
@@ -217,7 +217,8 @@ title: Math, Sonification, Plots
         </script>
 
         <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_neg.mp4"></audio>
-        <div class="tracePlot"></div>
+        <!-- div class="tracePlot"></div -->
+        <div id ="myAnimation"></div>
         </div>
 
         <script>
