--- a/fixes/index.html
+++ b/fixes/index.html
@@ -283,7 +283,7 @@ title: Math, Sonification, Plots
                             else {
                                 pos++; 
                                 elem.style.top = pos + 'px'; 
-                                elem.style.left = pos + 'px + 5'; 
+                                elem.style.left = pos + 'px' +5; 
                             }
                       }
                 }
