--- a/fixes/index.html
+++ b/fixes/index.html
@@ -282,8 +282,8 @@ title: Math, Sonification, Plots
                             }
                             else {
                                 pos++; 
-                                elem.style.top = pos + 'px'; 
-                                elem.style.left = pos + 'px' +5; 
+                                elem.style.top = pos + 'px' +5; 
+                                elem.style.left = pos + 'px'; 
                             }
                       }
                 }
