--- a/fixes/index.html
+++ b/fixes/index.html
@@ -236,7 +236,7 @@ title: Math, Sonification, Plots
 
                 function play(button) {
                         var elem = document.getElementById("myAnimation");   
-                        var pos = 0;
+                        var pos = 100;
                         var id = setInterval(frame, 10);
                         // var id = setTimeout(frame, 1000);
                         // var audio = document.getElementById("audio");
@@ -281,9 +281,10 @@ title: Math, Sonification, Plots
                                 clearInterval(id);
                             }
                             else {
-                                pos++; 
-                                elem.style.top = pos + 'px' +5; 
-                                elem.style.left = pos + 'px'; 
+                                pos++;
+                                // elem.style.top = pos + 'px' +5;
+                                elem.style.top = pos + 'px';
+                                elem.style.left = pos + 'px';
                             }
                       }
                 }
