--- a/fixes/index.html
+++ b/fixes/index.html
@@ -277,7 +277,7 @@ title: Math, Sonification, Plots
                         }
 
                         function frame() {
-                            if (pos == 400) {
+                            if (pos == 500) {
                                 clearInterval(id);
                             }
                             else {
@@ -285,6 +285,7 @@ title: Math, Sonification, Plots
                                 // elem.style.top = pos + 'px' +5;
                                 elem.style.top = pos + 'px';
                                 elem.style.left = pos + 'px';
+                                elem.style.right = pos;
                             }
                       }
                 }
