--- a/fixes/index.html
+++ b/fixes/index.html
@@ -277,14 +277,14 @@ title: Math, Sonification, Plots
                         }
 
                         function frame() {
-                            if (pos == 500) {
+                            if (pos == 450) {
                                 clearInterval(id);
                             }
                             else {
                                 pos++;
                                 // HORIZONTAL elem.style.top = pos + 'px' +5;
                                 elem.style.top = pos + 'px';
-                                elem.style.left = pos + 'px';
+                                // elem.style.left = pos + 'px';
                                 elem.style.right = pos + 'px';
                             }
                       }
